[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/PNG/Background/bg_layer1.png" type="Texture" id=1]
[ext_resource path="res://Objects/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/PlatformGroup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Font/Outfit/static/Outfit-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 551.5, 76.5 )

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="Sprite" parent="CanvasLayer"]
position = Vector2( 541, 992 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 487, 1573 )

[node name="Platform" parent="." instance=ExtResource( 2 )]
position = Vector2( 488, 1696 )

[node name="PlatformSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -451 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 540, 960 )
current = true
limit_left = 0
limit_top = -1410065408
limit_right = 1080
limit_bottom = 1920

[node name="DeathArea" type="Area2D" parent="Camera2D"]
position = Vector2( 8, 1154 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/DeathArea"]
shape = SubResource( 2 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 253.0
margin_top = 794.0
margin_right = 791.0
margin_bottom = 1045.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[connection signal="area_entered" from="Camera2D/DeathArea" to="." method="_on_DeathArea_area_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
